--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -41,6 +41,20 @@ jobs:
       - name: Setup environment
         uses: ./.github/actions/setup-environment
 
+      - name: Guard --bulma-* usage
+        run: |
+          set -euo pipefail
+          hits="$(rg -n -- '--bulma-' src || true)"
+          if [ -z "$hits" ]; then
+            exit 0
+          fi
+          forbidden="$(printf '%s\n' "$hits" | rg -v '^(src/styles/global\\.css|src/components/Header/index\\.astro):' || true)"
+          if [ -n "$forbidden" ]; then
+            echo "Unexpected --bulma-* usage found (keep it in src/styles/global.css bridge only):"
+            echo "$forbidden"
+            exit 1
+          fi
+
       - name: Lint
         run: pnpm run lint
 
