--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -55,6 +55,20 @@ jobs:
             exit 1
           fi
 
+      - name: Guard Bulma Sass @use usage
+        run: |
+          set -euo pipefail
+          hits="$(rg -n -- '@use \"bulma/sass' src || true)"
+          if [ -z "$hits" ]; then
+            exit 0
+          fi
+          forbidden="$(printf '%s\n' "$hits" | rg -v '^(src/styles/bulma\\.scss|src/styles/markdown\\.scss|src/styles/helper\\.scss|src/pages/song/index\\.astro|src/pages/nemo/index\\.astro):' || true)"
+          if [ -n "$forbidden" ]; then
+            echo "Unexpected Bulma Sass @use found (keep it in the known legacy style files only):"
+            echo "$forbidden"
+            exit 1
+          fi
+
       - name: Lint
         run: pnpm run lint
 
