feat(config): tailwindcssをastroプロジェクトに導入

--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@fortawesome/react-fontawesome": "^3.1.1",
     "@nanostores/react": "^1.0.0",
     "@playwright/test": "^1.57.0",
+    "@tailwindcss/vite": "^4.1.18",
     "@trivago/prettier-plugin-sort-imports": "^6.0.2",
     "@types/gtag.js": "^0.0.20",
     "@types/node": "^25.0.8",
@@ -59,10 +60,11 @@
     "sass": "^1.97.2",
     "semver": "^7.7.3",
     "sharp": "^0.34.5",
+    "tailwindcss": "^4.1.18",
     "tsx": "^4.21.0",
     "typescript": "^5.9.3",
     "typescript-eslint": "^8.53.0",
-    "vite": "^7.3.1",
+    "vite": "^6.4.1",
     "xml-formatter": "^3.6.7",
     "zod": "^4.3.5"
   },
